BootStrap 2.0.4 Fixed layout problem with input-xxlarge

--- a/public/javascripts/desktop/css/common.css
+++ b/public/javascripts/desktop/css/common.css
@@ -37,3 +37,21 @@ body {
 .alert {
    margin-top : 10px;
 }
+
+@media (min-width: 768px) and (max-width: 1200px) {
+  .input-large,
+  .input-xlarge,
+  .input-xxlarge,
+  input[class*="span"],
+  select[class*="span"],
+  textarea[class*="span"],
+  .uneditable-input {
+    display: block;
+    width: 100%;
+    min-height: 28px;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+        -ms-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+}
